<resources>
    <string name="app_name">Petagram</string>
    <string name="titulo_app_bar">Petagram</string>
    <string name="nombre_pet">Mascota</string>
    <string name="raiting_pet">Raiting</string>

    <string name="favoritos">favoritos</string>
    <string name="likeTrue">Ya diste me gusta a : \t</string>
    <string name="likeOn">Te gustó: \t</string>
    <string name="sinFavoritos">No Tienes Favoritos Aún</string>
    <!-- about-->
    <string name="contacto">Contacto</string>
    <string name="about">Acerca de</string>
    <string name="titulo_desarrollo">Desarrollado por:</string>
    <string name="twitter"> \t \@johancap115</string>
    <string name="github">\t github.com/johanPaC115</string>
    <string name="nombre_desarrollador">\t Johan Carreño \t</string>
    <string name="email_desarrollador">\t johancap115@gmail.com</string>
    <!-- Contacto-->
    <string name="nombre_contacto">Nombre</string>
    <string name="email">Correo Electronico</string>
    <string name="mensaje">Mensaje</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>