<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutDesarrollador">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/my_tool_bar"></include>

    <TextView
        android:id="@+id/tituloDesarrollador"
        style="@style/Toolbar.TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/titulo_desarrollo"
        />

    <TextView
        android:id="@+id/nombreDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tituloDesarrollador"
        android:text="@string/nombre_desarrollador"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/sharp_pets"
        android:gravity="center"
        android:drawableRight="@drawable/sharp_pets"
        />

    <TextView
        android:id="@+id/emailDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nombreDesarrollador"
        android:text="johancap115@gmail.com"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/twitterDesarrollador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailDesarrollador"
        android:text="@string/twitter"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/twitterDesarrollador"
        android:text="@string/github"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>